Fix: Redundant words

--- a/documentation-page/index.html
+++ b/documentation-page/index.html
@@ -262,7 +262,7 @@
           </p>
           <div class="code">
             <code>
-              <pre><span class='comment'>// switch (expresion) { case valor: proceso; break; }
+              <pre> <span class='comment'>// switch (expresion) { case valor: proceso; break; }
 </span>
 <span class='keyWord'>switch </span><span class="parenthesis">(</span><span class="name">diaSemana</span><span class="parenthesis">)</span> <span class="operators">{</span>
   <span class='keyWord'>case </span><span class="number">1</span><span class="operators">:</span>
@@ -285,7 +285,7 @@
     <span class='gen'>alert </span><span class="parenthesis">(</span><span class='quotedText'>&quot;Es fin de semana&quot;</span><span class="parenthesis">)</span><span class="operators">;
     <span class='keyWord'>break </span>;
   <span class='keyWord'>default </span>:
-    <span class='gen'>alert </span><span class="parenthesis">(</span><span class='quotedText'>&quot;Ese día no existe&quot;</span><span class="parenthesis">)</span><span class="operators">;
+    <span class='gen'>alert </span><span class="parenthesis">(</span><span class='quotedText'>&quot;Ese día no existe&quot;</span><span class="parenthesis">)</span><span class="operators">;</span>
 }</pre>
             </code>
           </div>
@@ -425,7 +425,7 @@
             <li>
               <a
                 href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript"
-                >Documentación oficial de MDN</a
+                >Documentación</a
               >
             </li>
             <li><a href="https://javascript.info/">JavaScript info</a></li>
