Feat: SEO improved

--- a/documentation-page/index.html
+++ b/documentation-page/index.html
@@ -181,7 +181,7 @@
               href="https://github.com/AlvaroFierro/Javascript-basico/tree/main/01_arrays"
               target="_blank"
               class="cta-links"
-              >aquí</a
+              >en este enlace</a
             >
           </p>
         </article>
@@ -442,6 +442,5 @@
       </section>
     </main>
   </body>
-  <script src="./index.js"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
