--- a/documentation-page/index.html
+++ b/documentation-page/index.html
@@ -359,7 +359,7 @@
             El <code class="keyword">do while</code> es un bucle similar al
             <code class="keyword">while</code> pero la diferencia principal es
             que este primero ejecuta y después comprueba que la condicion se
-            cuumpla. Por lo que se siempre se va a ejecutar una vez antes de que
+            cumpla. Por lo que se siempre se va a ejecutar una vez antes de que
             se compruebe la condicion.
           </p>
           <div class="code">
